--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -80,13 +80,13 @@ span:nth-child(3):hover {
     z-index: 10;
     margin: auto;
     position: relative;
-    width: 50%;
-    height: 50%;
-    padding: 2em;
+    width: 75%;
+    // height: 50%;
+    // padding: .25em;
 h2 {
     font-size: 6rem;
     // color: #FBF8FD;
-    line-height: 1;
+    line-height: .5;
     text-shadow: 0 0 2px #7D12FF, 3px 0 5px #B026FF;
     color: #7D12FF;
 }
