--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,8 @@
 <div class="main_container">
 <h2>About Me</h2>
 <p>My name is Regan Lussier and I'm a front end developer based out of Dallas, TX.
-   I am self taught in Angular, React, HTML/CSS, and SASS.    
+   I taught myself Angular, React, HTML/CSS, and SASS. Including, teaching myself 
+   UI/UX design.      
 </p>
 
 <div class="about_container-block">
