--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,9 +2,9 @@
 <h2>Contact</h2>
 
 <form class="contactForm" #form="ngForm">
-<input id="name" required ngModel type="text" placeholder="name">
-<input id="email" required ngModel type="text" placeholder="email">
-<textarea id="message" required ngModel type="textarea" cols="50" rows="10" placeholder="Type your message here..."></textarea>
+<input id="name" required ngModel type="text" placeholder="Name">
+<input id="email" required ngModel type="text" placeholder="Email">
+<textarea id="message" required ngModel type="textarea" cols="50" rows="10" color="white" placeholder="Type your message here..."></textarea>
 <button type="submit" class="btn">Submit</button>
 </form> 
 
