--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -4,7 +4,7 @@
 <div class="block">
 <mat-card class="mat-card">
 <img src="../assets/images/SanFran.JPG" width="50"/>
-<p>I'm an actor and creator. This is my actor's website. <a href="https://reggielussier.com" target="_blank">Reggie Lussier</a></p>
+<p>Not only do I do web development. I also act as a hobby. Here is my website: <a href="https://reggielussier.com" target="_blank">Reggie Lussier</a></p>
 </mat-card>
 </div>
 </div>
