--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -10,14 +10,8 @@
   
   <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FOvKaAC2pxia0vjItnU2PZN%2FBus-App%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
 
-</mat-card>
-
-<!-- <mat-card class="mat-card"> -->
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FOvKaAC2pxia0vjItnU2PZN%2FBus-App%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
-<!-- </mat-card> -->
-
 </div>
 </div>
 
-</div>
-</div>
+<!-- </div> -->
+ <!-- </div>  -->
